--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   image_picker: ^1.1.2
   path: ^1.9.1
   uuid: ^4.0.0
+  geolocator: ^11.0.0
+  geolocator_platform_interface: ^4.2.3
+  geolocator_android: ^4.4.1
+  geolocator_apple: ^2.3.5+2
+  geocoding: ^2.1.1
 
 dev_dependencies:
   flutter_test:
