added delivery_screen and updated rider dashboard and services

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   geolocator_android: ^4.4.1
   geolocator_apple: ^2.3.5+2
   geocoding: ^2.1.1
+  google_maps_flutter: ^2.5.0
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
