--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   geocoding: ^2.1.1
   google_maps_flutter: ^2.5.0
   url_launcher: ^6.1.14
+  intl: ^0.19.0
+  flutter_map: ^6.2.0
+  latlong2: ^0.9.0
+  flutter_map_marker_popup: ^6.0.0
+  flutter_map_location_marker: ^8.0.0
 
 dev_dependencies:
   flutter_test:
